# wishlist-magalu

./: Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
accounts/: models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_views.py
contrib/: env-sample
core/: settings.py  urls.py
customers/: models.py  serializers.py  urls.py  views.py
customers/migrations/: 0001_initial.py
customers/tests/: test_views.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_image.py
products/tests/: test_views.py
wishlist/: models.py  serializers.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py  0002_wishlist_name_of_constraint.py
wishlist/tests/: test_views.py
